# api/v1/routes/viajes/reservas.js
@@ -1,10 +1,0 @@
-// Ruta /api/v1/viajes/:viajeID/reservas
-
-const express = require('express');
-const router = express.Router();
-/**
- * pide reservar una plaza del viaje
- */
-router.post('/', async(req, res)=>{
-
-});
