# api/v1/routes/viajes/viajes.js
@@ -4,16 +4,17 @@ const express = require('express');
 const router = express.Router();
 const moment = require('moment')
 const db = require('../../database/database');
+const pasajeros = require('./pasajeros')
+
+
+router.use('/:viajeID/pasajeros', function(req, res, next) {
+    req.viajeID= req.params.viajeID;
+    next()
+  }, pasajeros);
+
 
 /**
  * Obtiene una lista de viajes segun su origen, destino y fechas
- * parametros obligatorios:
- * origen
- * destino
- * fechamaxima
- * 
- * opcionak:
- * fechaminima
  */
 router.get('/', async(req, res)=>{
     console.log(moment().toLocaleString());
@@ -37,7 +38,13 @@ router.get('/', async(req, res)=>{
  * obtiene los datos de un viaje particular
  */
 router.get('/:viajeID', async (req, res)=>{
-    
+    let result = await db.viajes.getViaje(req.params.viajeID);
+    if(result.length > 0){
+        res.send(result[0]);
+    }
+    else{
+        res.sendStatus(204);
+    }
 });
 
 module.exports = router;
